# paqueteando

./: .gitignore  Cargo.toml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: push.yml
paqueteando/: cli.py
src/: conexion.rs  errores.rs  lib.rs  main.rs
