[package]
name = "paqueteando"
version = "0.1.0"
authors = ["Alexander Ortíz <vtacius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "paqueteando"
crate-type = ["cdylib"]

[dependencies]
ssh2 = "0.8"
pyo3 = { version = "0.10.1"}

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
