[tool.poetry]
name = "paqueteando"
version = "0.1.0"
description = ""
authors = ["Alexander Ortíz <vtacius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = ">=3.0.6"
mock = ">=2.0.0"
setuptools-rust = ">=0.10.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
